# wasm-autogen

./: .gitignore  .taplo.toml  Cargo.toml  autogen.toml  readme.md
src/: config.rs  decleration_functions.rs  main.rs  tests.rs
tests/: test.toml
ts/: testing.ts
