[package]
name = "wasm_autogen"
version = "0.1.0"
edition = "2021"
description = "A tool to generate Rust wasm_bindgen code, automatically."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
confique = "0.2.5"
path-absolutize = "3.1.1"
prettyplease = "0.2.16"
proc-macro2 = "1.0.78"
quote = "1.0.35"
serde = { version = "1.0.196", features = ["derive"] }
swc_common = { version = "0.33.15", features = ["tty-emitter"] }
swc_ecma_ast = "0.111.1"
swc_ecma_parser = { version = "0.142.1", features = ["typescript"] }
syn = { version = "2.0.48", features = ["full", "parsing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
trycmd = "0.14.20"
